server/web/css/index.css
* { margin:0; padding:0; margin-before:0; margin-after:0; }

body {}
#global { max-width: 900px; margin:0 auto; padding:25px; }

button {
	vertical-align: middle;
}
button img {
	width: 25px;
}
#source, #target {
	height: 10%;
	border: 1px solid lightsteelblue;
  white-space: pre-wrap;       /* css-3 */
  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
  white-space: -pre-wrap;      /* Opera 4-6 */
  white-space: -o-pre-wrap;    /* Opera 7 */
}

#source:hover, #target:hover {
	border: 1px solid steelblue;
	cursor: text;
}
#source:focus, #source > span:focus, #target:focus, #target > span:focus {
	outline: none;
}
#source, #target {
	padding: 0.2em;
	min-height: 20px;
	margin-top:1em;
}
#target {
	background-color: #EEE;
	margin-top: 60px;
	margin-bottom: 30px;
}
.prefix {
	color: darkgreen;
}
.suffix {
	color: red;
}
#matrix {
	overflow: hidden;
}

table {
	margin: 1em;
	text-align:center;
	margin:100%;
	margin:0 auto;
}

table div.rotated {
	/* writing-mode:tb-rl; */
	transform: rotate(270deg);
	-webkit-transform: rotate(270deg);
	-moz-transform: rotate(270deg);
	-ms-transform: rotate(270deg);
	-o-transform: rotate(270deg);
	white-space: nowrap;
	padding-right: 2em;
}
table .vertical {
	white-space: nowrap;
}
table .right {
	text-align: right;
}
table .left {
	text-align: left;
}
table .top {
	vertical-align: top;
}
table .bottom {
	vertical-align: bottom;
}
table tbody td {
	border: 1px solid gray;
	width: 18px;
	height: 18px;
}
/* See http://www.zachleat.com/test/writing-mode/ */
textarea {
	width: 100%;
}
.wordconf-ok {
	color: inherit;
}
.noUi-upperHandle > div {
	background-color: darkorange;	
}
.wordconf-doubt, #slider-doubt {
	color: darkorange;
}
.noUi-lowerHandle > div {
	background-color: red;	
}

.wordconf-bad, #slider-bad {
	color: red;
}
.align {
	background-color: yellow;
}
#hidden {
	position: absolute;
	visibility: hidden;
}
.hidden {
	visibility: hidden;
}

#show-options {
	display: inline;
	margin-right:1em; 
}

#suggestions {
	margin: 0;
	margin-top: 4px;
	margin-left: -58px;
	padding: 0px;
	padding-right: 4px;
	position: absolute;
	visibility: hidden;
	white-space: pre;
	background: #EEE;
	border: 1px solid #CCC;
	border-top: 0px solid #EEE;
}
#suggestions dl {
	list-style: none;
}
#suggestions dt {
	border-right: 1px solid black;
	width: 60px;
	text-align: center;
	float: left;
}
#suggestions dd {
	margin-left: 58px;
	height: 22px;
	padding-right:5px;
}

#epen {
	position: absolute;
	visibility: hidden;
	z-index: 10;
}

#epen > canvas {
	border: 3px solid #000000;
	position: relative;
	display: block;
	width: 100%;
	height: 100%;
}

#epen > button {
	float: right;
}

.drawhere {
	position: relative;
	top: -33px;
	z-index: -1;
	display: block;
	margin: auto;
}

#htr-suggestions {
	border: 1px dashed grey;
	display: inline;
	float:left;
	white-space: nowrap;
}

#htr-suggestions:before {
	content: 'recognition: ';
}

select, input, button { padding:0.25em; }
fieldset { border:1px solid #CCC; padding:1em; }
#control-panel { margin-bottom:1em; }
#options {
  clear:both;
  overflow:auto;
  overflow-y:hidden;
}

label { font-weight:bold; }
form *, .control-panel-row *  { vertical-align:middle; }
.control-panel-row { display:block; clear:both; margin:0.3em auto; }

#conf-thresholds { margin-right:1em; margin-top:1em; }
  #conf-thresholds p { margin-bottom:0.3em; /*text-align:center;*/ }

#options-summary { color:#555; }

#updatedsentences { max-height:200px; overflow:auto; overflow-x:hidden; border-top:1px solid #CCC; border-bottom:1px solid #CCC; 	margin-top:100px; } 
  #updatedsentences dt, #updatedsentences dd { padding:0.5em; }
  #updatedsentences dt { font-weight:bold; background-color:#EEE; }
  #updatedsentences dd { color:gray; }

.clear { clear:both; }
.inline { display:inline; } 
.mt { margin-top:1em; }
.mt2 { margin-top:1.5em; }
.mb { margin-bottom:1em; }
.ml { margin-left:1em; }
.mr { margin-right:1em; }
.fl { float:left; }
.fr { float:right; }

